--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "typecheck": "tsc --noEmit",
     "build": "tsc -p tsconfig.json",
-    "start": "node src/server.js",
+    "start": "node src/server.ts",
     "postinstall": "npx prisma generate",
     "migrate:deploy": "prisma migrate deploy",
     "prisma:generate": "prisma generate",
