--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typecheck": "tsc --noEmit",
     "build": "tsc -p tsconfig.json",
     "prestart": "npm run build",             
-    "start": "node dist/server.js",
+    "start": "node server.ts",
     "postinstall": "npx prisma generate",
     "migrate:deploy": "prisma migrate deploy",
     "prisma:generate": "prisma generate",
