--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "lib": ["ES2020"],
     "module": "CommonJS",
     "rootDir": ".",
-    "outDir": "dist",
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*", "prisma/**/*.ts"]
+  "include": ["src/**/*", "prisma/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
